--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -419,6 +419,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 1-1:Validate the model using the test/train data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -592,25 +599,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'target_names' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[19], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Print the classification report for the model\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m classification_report\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(classification_report(y_test, predictions, target_names))\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'target_names' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "Class Purple       1.00      1.00      1.00     18759\n",
+      "Class Yellow       0.87      0.89      0.88       625\n",
+      "\n",
+      "    accuracy                           0.99     19384\n",
+      "   macro avg       0.94      0.94      0.94     19384\n",
+      "weighted avg       0.99      0.99      0.99     19384\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "# Print the classification report for the model\n",
-    "from sklearn.metrics import classification_report\n",
-    "print(classification_report(y_test, predictions, target_names))"
+    "target_names = [\"Class Purple\", \"Class Yellow\"]\n",
+    "print(classification_report(y_test, predictions, target_names=target_names))"
    ]
   },
   {
@@ -626,7 +637,7 @@
    "source": [
     "**Question:** How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** WRITE YOUR ANSWER HERE!"
+    "**Answer:** By employing confusion matrices and comparing the aggregate of predicted values for each class, I can tell that the number of true negatives and true positives (actuals) for each categorical class align and match. (individually summed by both columns and rows and equal to 19384). Consequently, we can deem the model as both accurate and precis"
    ]
   },
   {
