--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "9ee762ab-74a2-48db-80a0-f57f2ec13c15",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "f2adb1dd-f811-4297-9ec6-d3613f9a9b9d",
    "metadata": {},
    "outputs": [
@@ -299,7 +299,7 @@
        "4                 1       23000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "e728b79f-4530-472b-8052-83648a806682",
    "metadata": {},
    "outputs": [
@@ -329,7 +329,7 @@
        "(58152, 7)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "fd4b7e95-f49f-4453-bf2b-e3278907412b",
    "metadata": {},
    "outputs": [
@@ -376,7 +376,7 @@
        "LogisticRegression(max_iter=200, random_state=1)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "1ef01ad9-74f1-4fe1-ad2c-964a895e6edf",
    "metadata": {},
    "outputs": [
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "8bd76499-5976-4709-b182-6a4660489325",
    "metadata": {},
    "outputs": [
@@ -534,7 +534,7 @@
        "9           0       0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "ebfdead9-7a4f-4b72-a500-b9b0cad670fc",
    "metadata": {},
    "outputs": [
@@ -573,20 +573,19 @@
        "       [   67,   558]], dtype=int64)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Generate a confusion matrix for the model\n",
-    "from sklearn.metrics import confusion_matrix\n",
     "confusion_matrix(y_test, predictions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "604ccfeb-50d0-4c8b-955c-fccd8b5c157e",
    "metadata": {},
    "outputs": [
@@ -595,21 +594,21 @@
      "output_type": "stream",
      "text": [
       "Classification Report:\n",
-      "                  precision    recall  f1-score   support\n",
+      "                    precision    recall  f1-score   support\n",
       "\n",
-      "  healthy loan:0       1.00      1.00      1.00     18759\n",
-      "high-risk loan:1       0.87      0.89      0.88       625\n",
+      "  0 (healthy loan)       1.00      1.00      1.00     18759\n",
+      "1 (high-risk loan)       0.87      0.89      0.88       625\n",
       "\n",
-      "        accuracy                           0.99     19384\n",
-      "       macro avg       0.94      0.94      0.94     19384\n",
-      "    weighted avg       0.99      0.99      0.99     19384\n",
+      "          accuracy                           0.99     19384\n",
+      "         macro avg       0.94      0.94      0.94     19384\n",
+      "      weighted avg       0.99      0.99      0.99     19384\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Use unique values from the 'loan_status' column as target names\n",
-    "target_names = ['healthy loan:0', 'high-risk loan:1']\n",
+    "target_names = ['0 (healthy loan)', '1 (high-risk loan)']\n",
     "\n",
     "# Print the classification report for the model\n",
     "print(\"Classification Report:\")\n",
@@ -630,7 +629,7 @@
     "False Positive (FP): 80 (Actual 'healthy loan' incorrectly predicted as 'high-risk loan')\n",
     "False Negative (FN): 67 (Actual 'high-risk loan' incorrectly predicted as 'healthy loan')\n",
     "Summary 1st method:\n",
-    "By employing confusion matrices and comparing the aggregate of predicted values for each class, I can tell that the number of true negatives and true positives (actuals) for each categorical class align and match. Summed by both columns and rows and equal. Consequently, we can deem the model as both accurate and precis\n",
+    "By employing confusion matrices and comparing the aggregate of predicted values for each class, I can tell that the number of true negatives and true positives (actuals) for each categorical class align and match. Summed by both columns and rows and equal. Consequently, we can deem the model as both accurate and precise\n",
     "\n",
     "### 2nd method\n",
     "Precision for 'healthy loan' (class 0): 1.00 (almost 100% of the predicted 'healthy loan' are actually 'healthy loan')\n",
